--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
         <link rel="stylesheet" href="style.css" />
         <title>Trello</title>
     </head>
-    <body></body>
+    <body>
+        <nav>
+            <a href="#"></a>
+            <a href="#">Trello</a>
+        </nav>
+        <main class="main-content">
+            <div class="items-container" draggable="true"></div>
+        </main>
+        <script src="app.js"></script>
+    </body>
 </html>
