--- a/index.html
+++ b/index.html
@@ -83,6 +83,6 @@
                 </form>
             </div>
         </main>
-        <script src="app.js"></script>
+        <script src="./scripts/app.js"></script>
     </body>
 </html>
